Fix hidden overflow hero menu and update contact blocks editors

--- a/app/assets/stylesheets/components/_webpage_block.scss
+++ b/app/assets/stylesheets/components/_webpage_block.scss
@@ -8,7 +8,6 @@
   }
   .jumbotron {
     background-size: cover;
-    overflow: hidden;
     @media (max-width: 767px) {
       height: auto !important;
     }
